--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interactive Print Animation</title>
+<title>1 Year Special</title>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
 <style>
   body {
     margin: 0;
@@ -12,96 +13,77 @@
     justify-content: center;
     align-items: center;
     background: #fff9b0; /* light yellow */
-    font-family: 'Arial', sans-serif;
+    font-family: 'Comfortaa', cursive;
     overflow: hidden;
   }
 
-  /* Heart Button */
-  #heartBtn {
+  /* Click Me Button */
+  #clickMeBtn {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     font-size: 24px;
+    font-family: 'Fredoka One', cursive;
     font-weight: bold;
-    background: #fff;
-    border: 2px solid #ff4d6d;
-    border-radius: 12px;
+    color: #000;
+    background: white;
+    border: 2px solid white;
+    border-radius: 15px;
     padding: 12px 20px;
     cursor: pointer;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     transition: transform 0.2s;
   }
-
-  #heartBtn:hover { transform: scale(1.05); }
-  #heartBtn img { width: 30px; height: 30px; }
+  #clickMeBtn:hover { transform: scale(1.05); }
+  #clickMeBtn img { width: 30px; height: 30px; }
 
   /* Page */
   #page {
-    width: 80%;
-    max-width: 400px;
+    width: 85%;
+    max-width: 450px;
     height: 60%;
-    background: white;
+    background: #ffc88c; /* dark peach yellow */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.8);
     display: none;
-    border-radius: 12px;
+    border-radius: 15px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    padding: 30px 20px;
+    text-align: center;
     transition: transform 0.5s, opacity 0.5s;
+    color: #3b1f00;
   }
 
-  /* Print Button */
-  #printBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  #page h1, #page h2, #page h3 {
+    margin: 15px 0;
+    font-family: 'Fredoka One', cursive;
+  }
+  #page h1 { font-size: 28px; }
+  #page h2 { font-size: 24px; }
+  #page h3 { font-size: 20px; }
+
+  /* Inner Click Me button on page */
+  #innerBtn {
     display: flex;
     align-items: center;
-    gap: 5px;
-    font-size: 18px;
-    background: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 8px 12px;
+    gap: 6px;
+    font-size: 20px;
+    font-family: 'Fredoka One', cursive;
+    font-weight: bold;
+    color: #000;
+    background: white;
+    border: 2px solid white;
+    border-radius: 12px;
+    padding: 10px 16px;
     cursor: pointer;
+    margin-top: 15px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     transition: transform 0.2s;
   }
-  #printBtn:hover { transform: scale(1.05); }
-  #printBtn img { width: 20px; height: 20px; }
-
-  /* Printer head (black bar) */
-  #printerHead {
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    background: black;
-    top: 0;
-    left: 0;
-    display: none;
-    z-index: 10;
-    border-radius: 4px;
-    overflow: hidden;
-  }
-
-  /* Printer dots */
-  .dot {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0 6px;
-    background: red;
-  }
-  .dot.green { background: green; }
-
-  #printerDots {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  #innerBtn:hover { transform: scale(1.05); }
+  #innerBtn img { width: 25px; height: 25px; }
 
   /* Final Image */
   #finalImage {
@@ -112,44 +94,43 @@
     width: 80%;
     max-width: 400px;
     display: none;
-    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition: transform 2s ease, opacity 2s ease;
     opacity: 0;
+    border-radius: 12px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
   }
 
-  /* Responsive */
-  @media (max-width: 768px) {
-    #heartBtn { font-size: 20px; padding: 10px 16px; }
-    #heartBtn img { width: 25px; height: 25px; }
-    #page { width: 90%; height: 50%; }
-    #printBtn { font-size: 16px; padding: 6px 10px; }
-    #printBtn img { width: 18px; height: 18px; }
+  @media (max-width: 768px){
+    #clickMeBtn { font-size: 20px; padding: 10px 16px; }
+    #clickMeBtn img { width: 25px; height: 25px; }
+    #page { width: 90%; height: 50%; padding: 20px; }
+    #page h1 { font-size: 24px; }
+    #page h2 { font-size: 20px; }
+    #page h3 { font-size: 18px; }
+    #innerBtn { font-size: 18px; padding: 8px 14px; }
+    #innerBtn img { width: 20px; height: 20px; }
     #finalImage { max-width: 300px; }
-    #printerHead { height: 30px; }
   }
 </style>
 </head>
 <body>
 
-<!-- Heart Button -->
-<div id="heartBtn">
-  <img src="heart.png" alt="Heart Icon">
+<!-- First Click Me Button -->
+<div id="clickMeBtn">
+  <img src="bunny.png" alt="Bunny">
+  <img src="heart.png" alt="Heart">
   Click Me
 </div>
 
 <!-- Page -->
 <div id="page">
-  <button id="printBtn">
-    <img src="heart.png" alt="Heart Icon">
-    Print
-  </button>
-</div>
-
-<!-- Printer Head -->
-<div id="printerHead">
-  <div id="printerDots">
-    <span class="dot green"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+  <h1>1 Year Special</h1>
+  <h2>Shardex Legit</h2>
+  <h3>Click Me</h3>
+  <div id="innerBtn">
+    <img src="bunny.png" alt="Bunny">
+    <img src="heart.png" alt="Heart">
+    Click Me
   </div>
 </div>
 
@@ -157,49 +138,26 @@
 <img id="finalImage" src="1year.png" alt="1 Year">
 
 <script>
-const heartBtn = document.getElementById('heartBtn');
+const clickMeBtn = document.getElementById('clickMeBtn');
 const page = document.getElementById('page');
-const printBtn = document.getElementById('printBtn');
+const innerBtn = document.getElementById('innerBtn');
 const finalImage = document.getElementById('finalImage');
-const printerHead = document.getElementById('printerHead');
 
-// Step 1: Click Heart Button → Show Page
-heartBtn.addEventListener('click', () => {
-  heartBtn.style.display = 'none';
+// Step 1: Click first button → show page with animation
+clickMeBtn.addEventListener('click', () => {
+  clickMeBtn.style.display = 'none';
   page.style.display = 'block';
-  setTimeout(() => { page.style.transform = 'translate(-50%, -50%) scale(1)'; }, 50);
+  setTimeout(()=>{ page.style.transform = 'translate(-50%, -50%) scale(1)'; }, 50);
 });
 
-// Step 2: Click Print Button → Printer Animation
-printBtn.addEventListener('click', () => {
+// Step 2: Click inner button → 2 second animation → show final image
+innerBtn.addEventListener('click', () => {
   page.style.display = 'none';
-  printerHead.style.display = 'block';
-  printerHead.style.top = page.offsetTop + 'px';
-
-  const duration = 3000; // 3 seconds to cross page
-  const start = performance.now();
-
-  function animatePrinter(time) {
-    let elapsed = time - start;
-    let progress = elapsed / duration;
-    if(progress > 1) progress = 1;
-
-    // move printer head across page
-    printerHead.style.left = (progress * 100) + '%';
-
-    // gradually reveal final image
-    finalImage.style.display = 'block';
-    finalImage.style.opacity = progress;
-    finalImage.style.transform = `translate(-50%, -50%) scale(${progress})`;
-
-    if(progress < 1) {
-      requestAnimationFrame(animatePrinter);
-    } else {
-      printerHead.style.display = 'none';
-    }
-  }
-
-  requestAnimationFrame(animatePrinter);
+  finalImage.style.display = 'block';
+  setTimeout(()=>{
+    finalImage.style.transform = 'translate(-50%, -50%) scale(1)';
+    finalImage.style.opacity = '1';
+  }, 50);
 });
 </script>
 
